--- a/index.html
+++ b/index.html
@@ -217,13 +217,6 @@
       </div>
 
       <div>
-        <h2>Miscellaneous</h2>
-        <ul>
-          <li><a href="/dist/html/miscellaneous/line_breaker.html" title="Line Breaker">Line Breaker</a></li>
-        </ul>
-      </div>
-
-      <div>
         <h2>Styling</h2>
         <ul>
           <li><a href="/dist/html/styling/font_family.html" title="Font Family">Font Family</a></li>
@@ -286,6 +279,7 @@
         <h2>Misc</h2>
         <ul>
           <li><a href="/dist/html/misc/scrollable_container.html" title="Scrollable Container">Scrollable Container</a></li>
+          <li><a href="/dist/html/misc/scrollable_container_inline.html" title="Scrollable Container Inline Editor">Scrollable Container Inline</a></li>
         </ul>
       </div>
 
