Move print to a plugin.

--- a/html/international/direction_rtl.html
+++ b/html/international/direction_rtl.html
@@ -87,6 +87,7 @@
   <script type="text/javascript" src="../../js/plugins/inline_style.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/save.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/fullscreen.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/print.min.js"></script>
   <script type="text/javascript" src="../../js/languages/ro.js"></script>
 
   <script>
