--- a/html/popular/full.html
+++ b/html/popular/full.html
@@ -149,6 +149,7 @@
   <script type="text/javascript" src="../../js/plugins/url.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/video.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/help.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/print.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/special_characters.min.js"></script>
 
   <script>
