Enhanced Word pasting.

--- a/html/popular/full.html
+++ b/html/popular/full.html
@@ -151,6 +151,7 @@
   <script type="text/javascript" src="../../js/plugins/help.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/print.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/special_characters.min.js"></script>
+  <script type="text/javascript" src="../../js/plugins/word_paste.min.js"></script>
 
   <script>
     $(function(){
