Added example page for spell checker.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           <li><a href="/dist/html/3rd-party/at.js.html" title="At.JS">At.JS</a></li>
           <li><a href="/dist/html/3rd-party/code-mirror.html" title="Code Mirror">Code Mirror</a></li>
           <li><a href="/dist/html/3rd-party/require_js/index.html" title="Require JS">Require JS</a></li>
+          <li><a href="/dist/html/3rd-party/spell-checker/spell-checker.html" title="Spell Checker">Spell Checker</a></li>
         </ul>
       </div>
 
