Add missing translations.

--- a/html/popular/full.html
+++ b/html/popular/full.html
@@ -154,10 +154,13 @@
   <script type="text/javascript" src="../../js/third_party/spell_checker.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/special_characters.min.js"></script>
   <script type="text/javascript" src="../../js/plugins/word_paste.min.js"></script>
+  <script type="text/javascript" src="../../js/languages/ro.js"></script>
 
   <script>
     $(function(){
-      $('#edit').froalaEditor()
+      $('#edit').froalaEditor({
+        language: 'ro'
+      })
     });
   </script>
 </body>
